fix(layout): agrega overflow al html

--- a/assets/scss/modal.scss
+++ b/assets/scss/modal.scss
@@ -36,7 +36,7 @@
     &__header {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
+      align-items: center;
       background-color: white;
       padding: var(--modal__padding);
       border-bottom: 1px solid var(--neutral);
