--- a/assets/scss/normalize.scss
+++ b/assets/scss/normalize.scss
@@ -11,7 +11,8 @@
  html {
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
-	scroll-behavior: smooth; 
+	scroll-behavior: smooth;
+	box-sizing: border-box;
 }
 
 /* Sections
