--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,7 @@ html {
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 /* Sections
@@ -966,7 +967,8 @@ a:visited, ul:visited, li:visited {
   }
   .section__panel .text__wrapper--grid {
     --text__wrapper--gap: 16px;
-    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+    row-gap: 36px;
   }
   .section__panel .btn__wrapper--row {
     width: 100%;
@@ -1031,6 +1033,9 @@ a:visited, ul:visited, li:visited {
   #historico .panel__title--center, #historico .panel__subtitle--center {
     display: none !important;
   }
+  #historico .title__wrapper--col {
+    order: 2;
+  }
   #historico .text__wrapper--col {
     justify-content: flex-start;
     row-gap: 24px;
@@ -1038,6 +1043,8 @@ a:visited, ul:visited, li:visited {
   }
   #historico .inner__wrapper {
     --panel__gap: 24px;
+    display: flex;
+    flex-wrap: wrap-reverse;
   }
   #historico .inner__wrapper .inner__wrapper--right, #historico .inner__wrapper .inner__wrapper--left {
     align-items: center !important;
@@ -1494,7 +1501,7 @@ label {
 .modal__header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: center;
   background-color: white;
   padding: var(--modal__padding);
   border-bottom: 1px solid var(--neutral);
